--- a/ListaCompras/app/src/main/AndroidManifest.xml
+++ b/ListaCompras/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".CadastroActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
     </application>
 
 
